Change font size of question counter to address issues with readability from feedback

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ body {
 
 /* style question counter separetely to question area */
 #question-counter {
-    font-size: 18px;
+    font-size: 30px;
     margin-bottom: 20px;
 }
 
